# heatmap-tiles

./: .gitignore  README.md  Update.md  main.py  pyproject.toml  run.sh  test.ipynb
backend/: __init__.py  build_pyramid.py  colormap.py  config.py  generate_pyramid.py  pyramid_registry.py  server.py  tile_cache.py  tile_render.py
client/: package.json  vite.config.ts
client/src/: App.css  App.tsx  AxisLabels.ts  GenePicker.tsx  GroupedHeatmapLayer.ts  HeatmapTileLayer.ts  HeatmapView.tsx  PickingLayer.ts  SpatialLayout.ts  TileLoader.ts  api.ts  colormap.ts
docs/: HEATMAP_GUIDE.md
plans/: 100M_CELLS_EVALUATION.md  20M_CELLS_FEASIBLE_PLAN.md
