[project]
name = "heatmap-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "dask>=2026.7.1",
    "fastapi>=0.139.2",
    "h5py>=3.16.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.3.0",
    "scipy>=1.15.3",
    "uvicorn[standard]>=0.51.0",
    "zarr>=2.18.3",
]
